Fix positioning of projects on mobile resolution

--- a/assets/styles/portfolio.css
+++ b/assets/styles/portfolio.css
@@ -94,10 +94,10 @@ h4 {
 .row {
 	display: flex;
 	flex-wrap: wrap;
+	margin-right: 5px;
 }
 
 .col-sm {
-	flex: 33%;
 	max-width: 30%;
 	height: 200px;
 	padding: 0 10px;
@@ -177,6 +177,9 @@ h4 {
 	.col-sm {
 		flex: 50%;
 		max-width: 50%;
+		left: 50%;
+		transform: translateX(-50%);
+		margin-left: -5px;
 	}
 }
 
@@ -184,6 +187,7 @@ h4 {
 	.col-sm {
 		flex: 100%;
 		max-width: 100%;
+		margin-left: -10px;
 	}
 }
 
